hphp/hack/test/typecheck/ffp/function_abstract_bad.php.exp
File "function_abstract_bad.php", line 4, characters 7-14:
Top-level function cannot have modifier 'abstract' (Parsing[1002])
